# studious-palm-tree

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/characters/: __init__.py  brp_character.py  brp_skill.py  skill.py
src/sheets/: brp_character.py  brp_skill.py
src/utils/: __init__.py  roll.py
tests/: integration_tests.py  unit_tests.py
tests/sample/: raven_game.py
tests/test_characters/: alice.json  alice2.json  bob.json  edgar.json  edgar2.json  eve.json
